--- a/index.html
+++ b/index.html
@@ -1,7 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minecraft Modder Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Test</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="coverflow">
+            <!-- Placeholder for project entries -->
+            <div class="project">
+                <img src="project1.jpg" alt="Project 1">
+                <p>Project 1 Description</p>
+            </div>
+            <div class="project">
+                <img src="project2.jpg" alt="Project 2">
+                <p>Project 2 Description</p>
+            </div>
+            <!-- Add more projects as needed -->
+        </div>
+    </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Description about yourself and your modding experience.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    </section>
+    <footer>
+        <p>© 2023 Minecraft Modder Portfolio</p>
+    </footer>
 </body>
 </html>
