--- a/about.html
+++ b/about.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Developer Portfolio</title>
+    <title>About Me - Game Developer Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet"> <!-- Link to your custom CSS file -->
 </head>
 
 <body class="bg-dark text-light font-sans"> <!-- Updated classes -->
     
     <header class="bg-blue-500 text-white text-center py-4">
-        <h1 class="text-3xl font-bold">Game Developer Portfolio</h1>
+        <h1 class="text-3xl">Game Developer Portfolio</h1>
     </header>
     <nav class="bg-blue-700 text-white py-2">
         <ul class="flex justify-center space-x-4">
@@ -24,11 +24,9 @@
         </ul>
     </nav>
     <main>
-        <section id="projects" class="p-4">
-            <h2 class="text-2xl font-bold">My Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <!-- Project cards go here -->
-            </div>
+        <section id="about" class="p-4">
+            <h2 class="text-2xl font-bold">About Me</h2>
+            <p class="mt-2">I am a passionate game developer with a love for creating immersive gaming experiences. My journey in game development started...</p>
         </section>
     </main>
     <footer class="bg-blue-500 text-white text-center py-2">
