--- a/index.html
+++ b/index.html
@@ -3,36 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Developer Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
 </head>
 
-<body class="bg-dark text-light font-sans"> <!-- Updated classes -->
+<body class="body"> <!-- Updated classes -->
     
-    <header class="bg-blue-500 text-white text-center py-4">
-        <h1 class="text-3xl font-bold">Game Developer Portfolio</h1>
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                <span class="nav__logo--circle"></span>
+                <span class="nav__logo-name">Akoto's Portfolio</span>
+            </a>
+
+            <div class="nav__menu" id="nav-menu">
+                <span class="nav__title">Menu</span> <!-- Corrected class name -->
+
+                <h3 class="nav__name">Akoto</h3>
+
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="motion.html" class="nav__link"></a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link">About Me</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#projects" class="nav__link">Projects</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#contact" class="nav__link">Contact Me</a>
+                    </li>
+                </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
+
+                <div class="nav__buttons">
+
+                    <i class="ri-menu-4-line"></i>
+                </div>
+            </div>
+        </nav>
     </header>
-    <nav class="bg-blue-700 text-white py-2">
-        <ul class="flex justify-center space-x-4">
-            <li><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+
+
     <main>
         <section id="projects" class="p-4">
-            <h2 class="text-2xl font-bold">My Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <!-- Project cards go here -->
+                
             </div>
         </section>
     </main>
     <footer class="bg-blue-500 text-white text-center py-2">
-        <p>© 2023 Game Developer Portfolio</p>
+        <p>© 2024 Game Developer Portfolio</p>
     </footer>
     <script src="your-script.js"></script>
 
