add webm support

--- a/index.html
+++ b/index.html
@@ -94,14 +94,18 @@
                                 <h1 class="heading-xnormal">Welcome to my portfolio
                                 </h1>
                                 
+                                <video class="video" width="250" autoplay loop>
+                                    <source src="vector.webm" type="video/webm" />
+                                  </video>
+
                                 <div class="padding-bottom padding-xhuge"></div>
 
-                                <p class="text-size-medium max-width-large">Hi! I’m Akoto, a passionate Minecraft developer and community moderator based in Berlin.
+                                <p class="text-size-medium max-width-large">
                                 </p>
 
                                 <div class="padding-bottom padding-small"></div>
 
-                                <p class="text-size-small text-color-grey">I enjoy taking on challenges, organizing projects, and bringing creative ideas to life in the world of Minecraft.</p>
+                                <p class="text-size-small max-width-large">Hi! I’m Akoto, a passionate Minecraft developer based in Berlin.</p>
 
                                 </div>
 
