--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 
                                 <div class="align-center">
 
-                                <h1 class="heading-xnormal">Welcome to my portfolio
+                                <h1 class="heading-xnormal">Welcome to  <span class="text-animation">my</span> portfolio
                                 </h1>
                                 
-                                <video class="video" width="250" autoplay loop>
+                                <video class="video" preload width="250" autoplay loop>
                                     <source src="vector.webm" type="video/webm" />
                                   </video>
 
