added project page

--- a/projects.html
+++ b/projects.html
@@ -91,26 +91,68 @@
 
                                 <div class="align-center">
 
-                                <h1 class="heading-xnormal">Welcome to  <span class="text-animation">my</span> portfolio
+                                <h1 class="heading-xnormal">Projects
                                 </h1>
-                                
-                                <video id="videoElementId" class="video" width="250" autoplay muted loop>
-                                    <source src="vector.webm" type="video/webm" />
-                                </video>
+                            
 
                                 <div class="padding-bottom padding-xhuge"></div>
 
-                                <p class="text-size-medium max-width-large">
-                                </p>
-
-                                <div class="padding-bottom padding-small"></div>
-
-                                <p class="text-size-small max-width-large">Hi! I’m Akoto, a passionate Minecraft developer based in Berlin.</p>
+                                <div class="container">
+                                    <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
+                                        <div class="content">
+                                            <h2>Nothing</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <a href="#">Read More</a>
+                                        </div>
+                                    </div>
+                                    <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
+                                        <div class="content">
+                                            <h2>Nothing</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <a href="#">Read More</a>
+                                        </div>
+                                    </div>
+                                    <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
+                                        <div class="content">
+                                            <h2>Nothing</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <a href="#">Read More</a>
+                                        </div>
+                                    </div>
                                 </div>
 
+                                <div class="container">
+                                    <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
+                                        <div class="content">
+                                            <h2>Nothing</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <a href="#">Read More</a>
+                                        </div>
+                                    </div>
+                                    <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
+                                        <div class="content">
+                                            <h2>Nothing</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <a href="#">Read More</a>
+                                        </div>
+                                    </div>
+                                    <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
+                                        <div class="content">
+                                            <h2>Nothing</h2>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <a href="#">Read More</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+
                                 <div class="padding-bottom padding-xhuge"></div>
 
-                                <img src="hello-minecart.png" alt="" class="img-hello">
+                                <p class="text-size-small max-width-large">Every Project is selfmade with a lot of work.</p>
+
+                                <div class="padding-bottom padding-xhuge"></div>
+
+                                </div>
 
                             </div>
 
@@ -130,7 +172,7 @@
     <footer class="footer">
         <p>© 2024 Game Developer Portfolio</p>
     </footer>
-<script>
-</script>
+
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
 </body>
 </html>
