Added project pages
- Nothing Core Page (75% finished)
- Nothing Series (1% finished)

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
 
         </div>
-
     </header>
+    
 
 
 
@@ -112,6 +112,8 @@
 
                                 <img src="hello-minecart.png" alt="" class="img-hello">
 
+                                <div class="padding-bottom padding-xmiddle"></div>
+
                             </div>
 
                         </div>
@@ -126,10 +128,13 @@
         </div>
 
     </main>
-    
+
     <footer class="footer">
         <p>© 2024 Game Developer Portfolio</p>
     </footer>
+
+    <div class="padding-bottom padding-small"></div>
+
 <script>
 </script>
 </body>
