--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
 
                                 <div class="align-center">
 
-                                <h1 class="heading-xnormal">Projects
+                                <h1 class="heading-xnormal"><u>Projects</u>
                                 </h1>
                             
 
@@ -100,23 +100,26 @@
                                 <div class="container">
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
-                                            <h2>Nothing</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                            <a href="#">Read More</a>
+                                            <h2>Nothing Core</h2>
+                                            <p>Nothing Core is a core mod designed for the modpacks by Nothing Series.</p>
+                                            <a class="button_contact-me"
+                                            href="nothingcore.html">Read More</a>
                                         </div>
                                     </div>
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
-                                            <h2>Nothing</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                            <a href="#">Read More</a>
+                                            <h2>Nothing Pack</h2>
+                                            <p>The Nothing Pack is an exciting tech, magic and exploration-heavy modpack.</p>
+                                            <a class="button_contact-me"
+                                            href="nothingpack.html">Read More</a>
                                         </div>
                                     </div>
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
-                                            <h2>Nothing</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                            <a href="#">Read More</a>
+                                            <h2>Nothing-Series</h2>
+                                            <p>Nothing Series is a modding team focused on creating innovative mods with the goal of revolutionizing the modding experience.</p>
+                                            <a class="button_contact-me"
+                                            href="nothingseries.html">Read More</a>
                                         </div>
                                     </div>
                                 </div>
@@ -124,23 +127,26 @@
                                 <div class="container">
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
-                                            <h2>Nothing</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                            <a href="#">Read More</a>
+                                            <h2>LOTR Packs</h2>
+                                            <p>Nothing Series is known for releasing new Lord of the Ring modpacks almost every year.</p>
+                                            <a class="button_contact-me"
+                                            href="#">Read More</a>
                                         </div>
                                     </div>
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
                                             <h2>Nothing</h2>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                            <a href="#">Read More</a>
+                                            <a class="button_contact-me"
+                                            href="#">Read More</a>
                                         </div>
                                     </div>
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
                                             <h2>Nothing</h2>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                            <a href="#">Read More</a>
+                                            <a class="button_contact-me"
+                                            href="#">Read More</a>
                                         </div>
                                     </div>
                                 </div>
@@ -158,20 +164,26 @@
 
                         </div>
 
+
                     </div>
+
 
 
                 </div>
 
+
             </div>
+
 
         </div>
 
     </main>
-    
+
     <footer class="footer">
         <p>© 2024 Game Developer Portfolio</p>
     </footer>
+
+    <div class="padding-bottom padding-small"></div>
 
     <script type="text/javascript" src="vanilla-tilt.js"></script>
 </body>
