added missing project pages
- added nothing core
- added nothing pack(2)
- added nothing series

--- a/projects.html
+++ b/projects.html
@@ -135,16 +135,16 @@
                                     </div>
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
-                                            <h2>Nothing</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <h2>Mango Pack</h2>
+                                            <p>The Mango Pack is an exploration and RPG like focused modpack for fabric!</p>
                                             <a class="button_contact-me"
                                             href="#">Read More</a>
                                         </div>
                                     </div>
                                     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4">
                                         <div class="content">
-                                            <h2>Nothing</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                            <h2>Place Holder</h2>
+                                            <p>Cooming Soon</p>
                                             <a class="button_contact-me"
                                             href="#">Read More</a>
                                         </div>
