changed nothing-series description

--- a/nothingseries.html
+++ b/nothingseries.html
@@ -108,7 +108,7 @@
                                     <h1 class="heading-xsmall text-left width-more"> Nothing-Series</h1>
                                     <div class="padding-bottom padding-small"></div>
                                     
-                                    <p class="text-size-small max-width-large">Nothing Series is a modding team focused on creating innovative mods and modpacks with the goal of revolutionizing the modding experience.</p>We are a team of 5 people all doing there best to provide a wonderful gameplay experience.
+                                    <p class="text-size-small max-width-large">Nothing Series is a modding team focused on creating innovative mods and modpacks with the goal of revolutionizing the modding experience.</p>We are a team of 4 people all doing there best to provide a wonderful gameplay experience.</p>Toxzo: Texture-Lead, Lowtrixx Coder/Author, xImBlank Coder/Author and Akoto090 Team-Head/Coder/Author/Texture
                                     </p>
                                 </div>
 
